--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -18,18 +14,15 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"] // Maps `@` to the `src` directory
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    // Add path mapping here
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ] // Maps `@` to the `src` directory
-    }
+    ]
   },
   "include": [
     "**/*.js",
@@ -39,7 +32,5 @@
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
