--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,15 @@
 {
-    "build": {
-      "includeFiles": ["src/content/*.md"]
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build"
     }
-  }
-  
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
+}
