--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "framer-motion": "^11.11.11",
     "gray-matter": "^4.0.3",
     "html-react-parser": "^5.1.18",
-    "next": "^13.3.0",  
-    "next-themes": "^0.3.0",
+    "next": "^15.0.2",
+    "next-themes": "^0.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -36,12 +36,12 @@
     "unified": "^11.0.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22.8.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/typed.js": "^2.0.9",
-    "eslint": "^8",
-    "eslint-config-next": "13.3.0",  
+    "eslint": "^9.14.0",
+    "eslint-config-next": "^15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3"
