--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gray-matter": "^4.0.3",
     "html-react-parser": "^5.1.18",
     "next": "^15.0.2",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
